--- a/bucket/DLSSSwapper-Portable.json
+++ b/bucket/DLSSSwapper-Portable.json
@@ -14,6 +14,6 @@
     ],
     "checkver": "github",
     "autoupdate": {
-        "url": "https://github.com/beeradmoore/dlss-swapper/releases/download/v$version/DLSS.Swapper-$version.0-portable.zip"
+        "url": "https://github.com/beeradmoore/dlss-swapper/releases/download/v$version/DLSS.Swapper-$version-portable.zip"
     }
 }
